Chica 266 print jit shift select bug (#224)
* CHICA-266 PrintJIT shift Select Bug

* CHICA-266 PrintJIT shift select

* CHICA-266 PrintJIT shift select

--- a/web/module/resources/forcePrintJITs.css
+++ b/web/module/resources/forcePrintJITs.css
@@ -158,7 +158,6 @@ button.force-print-accordion {
     transition: 0.4s;
     overflow: hidden;
     text-overflow: ellipsis;
-	white-space: nowrap;   
 	font-weight: bold;	
 	font-family: inherit;
 }
